--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ jobs:
   include:
     - name: Python 3.8 on Xenial Linux
       python: 3.8           # this works for Linux but is ignored on macOS or Windows
-      script: py.test --cov=archetypal --verbose tests/
+      script: python -m pytest "tests/" -p no:warnings --cov="archetypal"
       after_success:
         - coverage report -m
         - coveralls
@@ -20,11 +20,11 @@ jobs:
       os: osx
       osx_image: xcode11.2
       language: objective-c
-      script: py.test --cov=archetypal --verbose tests/
+      script: python -m pytest "tests/" -p no:warnings --cov="archetypal"
     - name: "Python 3.8 on Windows"
       os: windows           # Windows 10.0.17134 N/A Build 17134
       language: shell       # 'language: python' is an error on Travis CI Windows
-      script: py.test --cov=archetypal --verbose tests/
+      script: python -m pytest "tests/" -p no:warnings --cov="archetypal"
     - stage: deploy
       script: echo "Deploying to PyPi and GitHub releases ..."
       deploy:
