--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+/cache/
+/data/
+/images/
+/logs/
