--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -4,9 +4,11 @@ on: [push]
 
 jobs:
   build-linux:
-    runs-on: ubuntu-latest
     strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
       max-parallel: 5
+    runs-on: ${{ matrix.platform }}
 
     steps:
     - uses: actions/checkout@v2
