--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -9,17 +9,20 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8]
-    name: Python ${{ matrix.python-version }} example
+    name: ${{ matrix.os }}, Python ${{ matrix.python-version }} example
     steps:
     - uses: actions/checkout@v2
     - name: Setup conda
-      uses: s-weigand/setup-conda@v1
+    - uses: conda-incubator/setup-miniconda@v1
       with:
-        update-conda: true
+        auto-update-conda: true
         python-version: ${{ matrix.python-version }}
-        conda-channels: conda-forge, anaconda
-    - run: conda --version
-    - run: which python
+    - name: Conda info
+      shell: bash
+      run: conda info
+    - name: Conda list
+      shell: pwsh
+      run: conda list
     - name: Install dependencies
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
