--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -2,7 +2,7 @@ name: Python Build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, develop ]
   pull_request:
     branches: [ master ]
 
