--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -44,8 +44,7 @@ jobs:
         run: |
           pip install --no-index --find-links=.cache/wheels -r requirements.txt
       - name: Install EnergyPlus
-        run: |
-          install_energyplus.sh
+        run: sh ./install_energyplus.sh
       - name: Lint with flake8
         run: |
           pip install flake8
