--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,7 @@ dependencies:
   - pycountry
   - scikit-learn
   - scipy
-  - pandas>=0.24
+  - pandas==1.2.0
   - numpy>=1.17
   - tqdm
   - tabulate
