--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,11 @@ description-file = README.md
 profile = black
 multi_line_output = 3
 skip = __init__.py
+
+[flake8]
+# Recommend matching the black line length (default 88),
+# rather than using the flake8 default of 79:
+max-line-length = 88
+extend-ignore =
+    # See https://github.com/PyCQA/pycodestyle/issues/373
+    E203,
