--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,24 +1,40 @@
-template: |
-  ## What’s New
-
-  $CHANGES
-
-  ## Contributors
-
-  $CONTRIBUTORS
-
+name-template: 'v$RESOLVED_VERSION 🌈'
+tag-template: 'v$RESOLVED_VERSION'
 categories:
-  - title: 'New Features'
+  - title: '🚀 New Features'
     labels:
-      - 'feature'
+      - 'new feature'
       - 'enhancement'
-  - title: 'Bug Fixes'
+  - title: '🐛 Bug Fixes'
     labels:
       - 'fix'
       - 'bugfix'
       - 'bug'
-  - title: 'Under the hood refactoring ⚙'
+  - title: '🧰 Maintenance'
     labels:
       - 'refactoring'
-name-template: 'v$NEXT_PATCH_VERSION 🌈'
-tag-template: 'v$NEXT_PATCH_VERSION'
+      - 'dependencies'
+change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
+version-resolver:
+  major:
+    labels:
+      - 'major'
+  minor:
+    labels:
+      - 'minor'
+      - 'feature'
+      - 'new feature'
+      - 'enhancement'
+  patch:
+    labels:
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
+      - 'patch'
+      - 'refactoring'
+  default: patch
+template: |
+  ## Changes
+
+  $CHANGES
