--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -11,13 +11,13 @@ on:
 
 jobs:
   build:
-
+    
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
-        os: [macos-latest, ubuntu-latest, windows-latest]
-        energyplus-version: [9.2.0, 9.4.0]
+        python-version: [ 3.7, 3.8, 3.9 ]
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
+        energyplus-version: [ 9.2.0, 9.4.0 ]
         include:
           - energyplus-version: 9.2.0
             energyplus-sha: 921312fa1d
@@ -26,37 +26,38 @@ jobs:
             energyplus-sha: 998c4b761e
             energyplus-install: 9-4-0
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install EnergyPlus
-      env:
-        ENERGYPLUS_VERSION: ${{ matrix.energyplus-version }}
-        ENERGYPLUS_SHA: ${{ matrix.energyplus-sha }}
-        ENERGYPLUS_INSTALL_VERSION: ${{ matrix.energyplus-install }}
-        OS_NAME: ${{ matrix.os }}
-      run: sh ./install_energyplus.sh
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest-cov
-        if [ -f requirements.txt ]; then pip install -r requirements.txt -r requirements-dev.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest --cov=energy-pandas --cov-report=xml tests/
-    - name: Upload coverage to Codecov
-      if: ${{ matrix.python-version == 3.7 }}
-      uses: codecov/codecov-action@v1
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        files: ./coverage.xml
-        fail_ci_if_error: false
-        verbose: true 
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install EnergyPlus
+        env:
+          ENERGYPLUS_VERSION: ${{ matrix.energyplus-version }}
+          ENERGYPLUS_SHA: ${{ matrix.energyplus-sha }}
+          ENERGYPLUS_INSTALL_VERSION: ${{ matrix.energyplus-install }}
+          OS_NAME: ${{ runner.os }}
+        run: sh ./install_energyplus.sh
+      - name: Install dependencies
+        if: success()
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install flake8 pytest-cov
+          if [ -f requirements.txt ]; then pip install -r requirements.txt -r requirements-dev.txt; fi
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Test with pytest
+        run: |
+          pytest --cov=energy-pandas --cov-report=xml tests/
+      - name: Upload coverage to Codecov
+        if: ${{ matrix.python-version == 3.7 }}
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
+          fail_ci_if_error: false
+          verbose: true
