--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,7 +37,7 @@ jobs:
           ENERGYPLUS_SHA: ${{ matrix.energyplus-sha }}
           ENERGYPLUS_INSTALL_VERSION: ${{ matrix.energyplus-install }}
           OS_NAME: ${{ runner.os }}
-        run: sh ./install_energyplus.sh
+        run: bash ./install_energyplus.sh
       - name: Install dependencies
         if: success()
         run: |
