--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -51,7 +51,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest --cov=energy-pandas --cov-report=xml tests/
+          pytest --cov=archetypal --cov-report=xml tests/
       - name: Upload coverage to Codecov
         if: ${{ matrix.python-version == 3.7 }}
         uses: codecov/codecov-action@v1
