--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         python-version: [ 3.7, 3.8, 3.9 ]
         os: [ macos-latest, ubuntu-latest, windows-latest ]
-        energyplus-version: [ 9.2.0, 9.4.0 ]
+        energyplus-version: [ 9.2.0 ]  # later, add 9.4.0
         include:
           - energyplus-version: 9.2.0
             energyplus-sha: 921312fa1d
