--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,6 +27,8 @@ jobs:
           #   energyplus-sha: 998c4b761e
           #   energyplus-install: 9-4-0
     steps:
+      - name: echo ostype
+        run: echo $OSTYPE
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
