--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -45,7 +45,7 @@ jobs:
         if: success()
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8 pytest-cov
+          python -m pip install flake8 pytest-cov pytest-xdist
           pip install -r requirements.txt -r requirements-dev.txt
       - name: Lint with flake8
         run: |
@@ -53,9 +53,9 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with pytest
+      - name: Test with pytest[psutil]
         run: |
-          pytest --cov=archetypal --cov-report=xml tests/
+          pytest -n auto --cov=archetypal --cov-report=xml tests/
       - name: Upload coverage to Codecov
         if: ${{ matrix.python-version == 3.7 }}
         uses: codecov/codecov-action@v1
