--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,8 +41,20 @@ jobs:
           ENERGYPLUS_SHA: ${{ matrix.energyplus-sha }}
           ENERGYPLUS_INSTALL_VERSION: ${{ matrix.energyplus-install }}
         run: bash ./install_energyplus.sh
+      - name: Get pip cache dir
+        id: pip-cache
+        run: |
+          echo "::set-output name=dir::$(pip cache dir)"
+      - name: pip cache
+        id: cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.pip-cache.outputs.dir }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       - name: Install dependencies
-        if: success()
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov pytest-xdist[psutil]
