--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -54,7 +54,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
       - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: success()
         run: |
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest-cov pytest-xdist[psutil]
