--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -65,15 +65,29 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ steps.pip-cache.outputs.dir }}
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', '**/requirements-dev.txt') }}
+          key: ${{ runner.os }}-pip-cache-${{ hashFiles('**/requirements.txt', '**/requirements-dev.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-pip-cache-
+      - name: pip wheel cache
+        id: pip-wheel-cache
+        uses: actions/cache@v2
+        with:
+          path: .cache/wheels
+          key: ${{ runner.os }}-pip-wheel-${{ hashFiles('**/requirements.txt', '**/requirements-dev.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-wheel-
+      - name: Build dependencies
+        if: steps.pip-wheel-cache.outputs.cache-hit != 'true'
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install wheel
+          python -m pip wheel --wheel-dir=.cache/wheels -r requirements.txt -r requirements-dev.txt
       - name: Install dependencies
         if: success()
         run: |
           python -m pip install --upgrade pip
+          python -m pip install --no-index --find-links=.cache/wheels -r requirements.txt -r requirements-dev.txt
           python -m pip install flake8 pytest-cov pytest-xdist[psutil]
-          pip install -r requirements.txt -r requirements-dev.txt
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
