--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,11 +41,23 @@ jobs:
           ENERGYPLUS_SHA: ${{ matrix.energyplus-sha }}
           ENERGYPLUS_INSTALL_VERSION: ${{ matrix.energyplus-install }}
         run: bash ./install_energyplus.sh
+      - name: Get pip cache dir
+        id: pip-cache
+        run: |
+          echo "::set-output name=dir::$(pip cache dir)"
+      - name: pip cache
+        id: cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.pip-cache.outputs.dir }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', '**/requirements-dev.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       - name: Install dependencies
         if: success()
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8 pytest-cov
+          python -m pip install flake8 pytest-cov pytest-xdist[psutil]
           pip install -r requirements.txt -r requirements-dev.txt
       - name: Lint with flake8
         run: |
@@ -55,7 +67,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest --cov=archetypal --cov-report=xml tests/
+          pytest -n auto --cov=archetypal --cov-report=xml tests/
       - name: Upload coverage to Codecov
         if: ${{ matrix.python-version == 3.7 }}
         uses: codecov/codecov-action@v1
