--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,10 @@
 networkx
-shapely
 geomeppy
-matplotlib>=3.2  # because of TwoSlopesNorm
-six
 eppy
-requests>=2.18
+matplotlib>=3.2  # because of TwoSlopesNorm
 pycountry
 scikit-learn
-scipy
 pandas>=1.2.0
-pyomo
 numpy>=1.17
 tqdm
 tabulate
@@ -20,5 +15,5 @@ click
 outdated
 deprecation
 sigfig
-energy-pandas
+energy-pandas==0.1.2
 setuptools_scm
