--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,6 @@ updates:
     interval: daily
     time: "10:00"
   open-pull-requests-limit: 10
+  # Raise pull requests for version updates
+  # to pip against the `develop` branch
+  target-branch: "develop"
