--- a/setup.cfg
+++ b/setup.cfg
@@ -13,3 +13,4 @@ max-line-length = 88
 extend-ignore =
     # See https://github.com/PyCQA/pycodestyle/issues/373
     E203,
+    E501,  # line too long (> 88 characters)
