Completes the big cleanup

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
-networkx
-geomeppy
-eppy
+networkx==2.5
+geomeppy==0.11.8
+eppy==0.5.56
 matplotlib>=3.2  # because of TwoSlopesNorm
-pycountry
-scikit-learn
+pycountry==20.7.3
+scikit-learn==0.24.1
 pandas>=1.2.0
 numpy>=1.17
-tqdm
-tabulate
-path
-tsam
-pint
-click
-outdated
-deprecation
-sigfig
-energy-pandas==0.2.1
-setuptools_scm
+tqdm==4.59.0
+tabulate==0.8.9
+path~=15.0.0
+click==7.1.2
+outdated~=0.2.0
+deprecation==2.1.0
+sigfig==1.1.8
+pybind11==2.6.2
+requests~=2.25.1
+packaging~=20.9
+pytest~=6.1.2
+setuptools~=49.6.0
+sklearn~=0.0
+CoolProp~=6.4.1
+energy-pandas==0.2.3
