--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -59,7 +59,7 @@ jobs:
         if: success()
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8 pytest-cov pytest-xdist[psutil]
+          python -m pip install flake8 pytest-cov pytest-xdist[psutil] cython requests jinja2 pyyaml pycrypto wheel
           pip install -r requirements.txt -r requirements-dev.txt
       - name: Lint with flake8
         run: |
