--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,6 +37,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Setup cmake
+        uses: jwlawson/actions-setup-cmake@v1.8
+      - name: Use cmake
+        run: cmake --version
       - name: Install EnergyPlus
         env:
           ENERGYPLUS_VERSION: ${{ matrix.energyplus-version }}
