--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         python-version: [ 3.7, 3.8 ]
-        os: [ macos-latest, ubuntu-latest, windows-latest ]
+        os: [ ubuntu-latest ]  # later, add macos-latest, windows-latest
         energyplus-version: [ 9.2.0 ]  # later, add 9.4.0
         include:
           - runs-on: ubuntu-latest
