--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ numpy>=1.17
 tqdm~=4.60.0
 tabulate~=0.8.9
 path~=15.1.2
-click~=8.0.1
+click~=7.1.2  # because ladybug-core 0.39.3 depends on click==7.1.2
 outdated~=0.2.1
 deprecation~=2.1.0
 sigfig~=1.1.8
