--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,5 +7,5 @@ updates:
     time: "10:00"
   open-pull-requests-limit: 10
   # Raise pull requests for version updates
-  # to pip against the `develop` branch
-  target-branch: "develop"
+  # to pip against the `main` branch
+  target-branch: "main"
