--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,14 +10,35 @@ on:
 jobs:
   deploy:
 
-    runs-on: ubuntu-latest
-
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        python-version: [ 3.8, 3.9, "3.10" ]
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        include:
+          - os: ubuntu-latest
+            target: linux
+            compiler: gcc
+          - os: windows-2019
+            target: windows
+            compiler: gcc
+          - os: macos-11
+            target: macos
+            compiler: gcc
+          exclude:
+            - os: macos-11
+              python-version: 2.7
+            - os: windows-2019
+              python-version: 2.7
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
+    - name: checkout
+      uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: ${{ matrix.python-version }}
+    - name: info
+      run: python --version && cmake --version
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
