--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,7 @@ extend-ignore =
     # See https://github.com/PyCQA/pycodestyle/issues/373
     E203,
     E501,  # line too long (> 88 characters)
+
+[tool:pytest]
+log_cli = True
+log_cli_level = INFO
