--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -59,6 +59,8 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
+        env:
+          ENERGYPLUS_VERSION: ${{ matrix.energyplus-install }}
         run: |
           pytest -n auto --cov=archetypal --cov-report=xml tests/
       - name: Upload coverage to Codecov
