--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ eppy==0.5.60  # for stability
 matplotlib~=3.4  # because of TwoSlopesNorm
 pycountry~=20.7.3
 scikit-learn~=1.0.2
-pandas>=1.2.0
+pandas>=1.2.0,<2.0
 numpy>=1.17
 tqdm~=4.61.2
 tabulate~=0.8.9
@@ -15,7 +15,7 @@ sigfig~=1.1.9
 requests~=2.25.1
 packaging~=21.0
 pytest~=6.2.4
-setuptools~=56.2.0
+setuptools==67.7.2
 CoolProp~=6.4.1
 energy-pandas~=0.3.3
 validator_collection~=1.5.0
