uses install-energyplus (#462)
* uses

* v1

* trigger

* Update python-package.yml

* Update python-package.yml

* update install_energyplus.sh

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,11 +37,11 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: 'pip' # caching pip dependencies
       - name: Install EnergyPlus
-        env:
-          ENERGYPLUS_VERSION: ${{ matrix.energyplus-version }}
-          ENERGYPLUS_SHA: ${{ matrix.energyplus-sha }}
-          ENERGYPLUS_INSTALL_VERSION: ${{ matrix.energyplus-install }}
-        run: bash ./install_energyplus.sh
+        uses: Elementa-Engineering/install-energyplus@v1
+        with:
+          energyplus-version: ${{ matrix.energyplus-version }}
+          energyplus-sha: ${{ matrix.energyplus-sha }}
+          energyplus-install: ${{ matrix.energyplus-install }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
