--- a/requirements.txt
+++ b/requirements.txt
@@ -5,20 +5,19 @@ pycountry~=20.7.3
 scikit-learn~=1.0.2
 pandas>=1.2.0,<2.0
 numpy>=1.17
-tqdm~=4.61.2
+tqdm
 tabulate~=0.8.9
 path~=16.0.0
-click~=8.0.1
-outdated~=0.2.1
-deprecation~=2.1.0
-sigfig~=1.1.9
-requests~=2.25.1
-packaging~=21.0
-pytest~=6.2.4
-setuptools==67.7.2
+click
+outdated
+deprecation
+sigfig
+requests
+packaging
+setuptools
 CoolProp~=6.4.1
-energy-pandas~=0.3.3
-validator_collection~=1.5.0
-pint==0.19
-typing_extensions==4.3.0
-pydantic
+energy-pandas
+validator_collection
+pint<=0.19
+typing_extensions
+pydantic-settings
