--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ networkx~=2.6.1
 eppy==0.5.60  # for stability
 matplotlib~=3.4  # because of TwoSlopesNorm
 pycountry~=20.7.3
-scikit-learn~=1.0.2
+scikit-learn
 pandas>=2.0.3
 numpy>=1.17
 tqdm
