--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ networkx~=2.6.1
 eppy==0.5.60  # for stability
 matplotlib~=3.4  # because of TwoSlopesNorm
 pycountry~=20.7.3
-scikit-learn~=1.0.2
-pandas>=1.2.0,<2.0
+scikit-learn
+pandas>=2.0.3
 numpy>=1.17
 tqdm
 tabulate~=0.8.9
