--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [ 3.8 ]
+        python-version: [ 3.9 ]
         os: [ ubuntu-latest ]  # later, add macos-latest, windows-latest
         energyplus-version: [ 9.2.0 ]  # later, add 9.4.0
         include:
@@ -22,10 +22,6 @@ jobs:
           - energyplus-version: 9.2.0
             energyplus-sha: 921312fa1d
             energyplus-install: 9-2-0
-          # later, add 9.4.0
-          # - energyplus-version: 9.4.0
-          #   energyplus-sha: 998c4b761e
-          #   energyplus-install: 9-4-0
     steps:
       - name: Display the OS
         run: echo $OSTYPE
@@ -35,7 +31,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip' # caching pip dependencies
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
       - name: Install EnergyPlus
         uses: Elementa-Engineering/install-energyplus@v1
         with:
@@ -44,25 +42,19 @@ jobs:
           energyplus-install: ${{ matrix.energyplus-install }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install flake8 pytest-cov pytest-xdist[psutil]
-          python -m pip install -r requirements.txt -r requirements-dev.txt
-          python -m pip install git+https://github.com/samuelduchesne/geomeppy.git@v0.13#egg=geomeppy
+          poetry install
       - name: Lint with flake8
         run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest -n auto --cov=archetypal --cov-report=xml tests/
+          poetry run pytest -n auto --cov=archetypal --cov-report=xml tests/
       - name: Upload coverage to Codecov
-        if: ${{ matrix.python-version == 3.8 }}
+        if: ${{ matrix.python-version == 3.9 }}
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
           fail_ci_if_error: false
           verbose: true
-
