add flake8 to dev group

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ pytest = "^8.2.2"
 pytest-cov = "^5.0.0"
 
 
+flake8 = "^7.0.0"
 [tool.poetry.group.docs.dependencies]
 sphinx = "^7.3.7"
 sphinx-rtd-theme = "^2.0.0"
