--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ pytest-cov = "^5.0.0"
 
 
 flake8 = "^7.0.0"
+pytest-xdist = "^3.6.1"
 [tool.poetry.group.docs.dependencies]
 sphinx = "^7.3.7"
 sphinx-rtd-theme = "^2.0.0"
