run flake8 on archetypal dir

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -49,8 +49,8 @@ jobs:
           poetry install
       - name: Lint with flake8
         run: |
-          poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          poetry run flake8 ./archetypal --count --select=E9,F63,F7,F82 --show-source --statistics
+          poetry run flake8 ./archetypal --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Install EnergyPlus
         uses: Elementa-Engineering/install-energyplus@v1
         with:
