--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,14 +57,14 @@ jobs:
           energyplus-version: ${{ matrix.energyplus-version }}
           energyplus-sha: ${{ matrix.energyplus-sha }}
           energyplus-install: ${{ matrix.energyplus-install }}
-#      - name: Test with pytest
-#        run: |
-#          poetry run pytest -n auto --cov=archetypal --cov-report=xml tests/
-#      - name: Upload coverage to Codecov
-#        if: ${{ matrix.python-version == 3.9 }}
-#        uses: codecov/codecov-action@v1
-#        with:
-#          token: ${{ secrets.CODECOV_TOKEN }}
-#          files: ./coverage.xml
-#          fail_ci_if_error: false
-#          verbose: true
+      - name: Test with pytest
+        run: |
+          poetry run pytest -n auto --cov=archetypal --cov-report=xml tests/
+      - name: Upload coverage to Codecov
+        if: ${{ matrix.python-version == 3.9 }}
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
+          fail_ci_if_error: false
+          verbose: true
