--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,6 +27,8 @@ jobs:
         run: echo $OSTYPE
         shell: bash
       - uses: actions/checkout@v3
+        with:
+          submodules: true
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
