--- a/.github/workflows/on-release-main.yml
+++ b/.github/workflows/on-release-main.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Check out
         uses: actions/checkout@v3
+        with:
+          submodules: "true"
 
       - name: Set up the environment
         uses: ./.github/actions/setup-poetry-env
