--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,11 @@ python =
 [testenv]
 passenv = PYTHON_VERSION
 allowlist_externals = poetry
+setenv =
+    ARCHETYPAL_DATA = {envtmpdir}/cache
+    ARCHETYPAL_LOGS = {envtmpdir}/logs
+    ARCHETYPAL_IMAGES = {envtmpdir}/images
+    ARCHETYPAL_CACHE = {envtmpdir}/cache
 commands =
     poetry install -v
     pytest --doctest-modules tests --cov --cov-config=pyproject.toml --cov-report=xml
