--- a/tox.ini
+++ b/tox.ini
@@ -20,5 +20,4 @@ setenv =
     MPLBACKEND = agg
 commands =
     poetry install -v
-    pytest {posargs}
-;    pytest --doctest-modules tests --cov --cov-config=pyproject.toml --cov-report=xml
+    pytest --doctest-modules tests --cov --cov-config=pyproject.toml --cov-report=xml
