An issue with the Basement preprocessor has been fixed (#510)
* An issue simulating models with the Slab PreProcessor has been fixed (#505)

* adds IDF.copy() and IDF.saveas(inplace=True) (#254)

* Adjusts svg repr to the min/max values of the schedule (#255)

* Graceful warning when Slab or Basement program is not found

* Adds KeyBoardInterupt to IDF Thread

* catches more variations of unit name

* Adds ability to scale a schedule

* Fixes fallback limits for Schedule.plot2d() when Type is not defined

* Type can be specified in Schedule.from_values constructor

* plot2d is prettier by default

* more Typing

* Return existing object when new_object is there (#257)

* Adds ability to replace schedule values without affecting the full load hours

* more robust IDF.name property

* Keep sim files when error occurs (#276)

* updates requests requirement from ~=2.25.1 to >=2.26 (#292)

* typo

* this

* gitsubmodule as https

* p

* pp

* this

* error

* catch outfile

* logging

* Revert "logging"

This reverts commit bef3e4b7d1ae5a38bc894b636da5ebf31397bae8.

* keep

* as model

* better logging

* comments

---------

Co-authored-by: Samuel Letellier-Duchesne <samueld@mit.edu>
Co-authored-by: Zach Berzolla <53047789+zberzolla@users.noreply.github.com>

* fix build-and-publish

* fix

* refactors E+ processes

* fix Pyflakes (F) type rules

* allow setting `as_version` in `IDF.from_example_files` to load example from specified version

* set energy-plus version in tox

* raises an EnergyPlusVersionError if transition is outside available bounds

* fix test

* fix transition exe

* rm files

* test does not need to use temp file anymore

* object

* raises EnergyPlusVersionError

* cleanup

* catch CalledProcessError

---------

Co-authored-by: Samuel Letellier-Duchesne <samueld@mit.edu>
Co-authored-by: Zach Berzolla <53047789+zberzolla@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,7 @@ archetypal = "archetypal.cli:cli"
 testpaths = ["tests"]
 
 [tool.ruff]
-target-version = "py37"
+target-version = "py310"
 line-length = 120
 fix = true
 select = [
@@ -111,7 +111,7 @@ select = [
     #"E",
     "W",
     # pyflakes
-    # "F",
+     "F",
     # pygrep-hooks
     "PGH",
     # pyupgrade
@@ -129,7 +129,7 @@ ignore = [
     # Too Complex
     "C901"
 ]
-exclude = ["tests/input_data/*", "docker/trnsidf/*"]
+exclude = ["tests/input_data/*", "docker/trnsidf/*", "geomeppy"]
 
 [tool.ruff.format]
 preview = true
