allow pytest as function in tox

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ python =
 
 [testenv]
 passenv = PYTHON_VERSION
-allowlist_externals = poetry
+allowlist_externals = poetry, pytest
 setenv =
     ARCHETYPAL_DATA = {envtmpdir}/cache
     ARCHETYPAL_LOGS = {envtmpdir}/logs
